syntax = "proto3";
package dstk;

import "common.proto";

message CounterGetReq {
  string key = 1;
}

message CounterGetRes {
  Ex ex = 1;
  int64 value = 2;
}

message CounterIncReq {
  string key = 1;
  int64 value = 2;
}

message CounterIncRes {
  Ex ex = 1;
}

service CounterRpc {
  rpc Get (CounterGetReq) returns (CounterGetRes);
  rpc Inc (CounterIncReq) returns (CounterIncRes);
}
